# wdlfmt

./: .flake8  .gitignore  .gitmodules  404.html  CHANGELOG.md  README.md  env.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/: release-please.yml
.github/workflows/: check-formatting.yml  docs.yml  python-package.yml  python-publish.yml  release-please.yml
api/checker/: index.html
api/formatting/: index.html
docs/: index.md  installation.md  style-guide.md  usage.md
docs/api/: checker.md  formatting.md
docs/technical/: architecture.md  formatters.md  grammar.md  visitor.md
installation/: index.html
scripts/: update_snapshots.py
search/: search_index.json
style-guide/: index.html
technical/architecture/: index.html
technical/formatters/: index.html
technical/grammar/: index.html
technical/visitor/: index.html
test/: test_check_flag.py  test_checker.py  test_e2e.py  test_formatted.wdl  test_looping.py  test_md5.wdl  test_shell.py  test_shell.sh  test_snapshots.py  test_specific_cases.py
test/snapshots/: full_example.expected.wdl  full_example.input.wdl  md5_check.expected.wdl  md5_check.input.wdl  struct_basic.expected.wdl  struct_basic.input.wdl  unicycler.expected.wdl  unicycler.input.wdl
usage/: index.html
wdlfmt/: __init__.py  checker.py  cli.py  utils.py  visitor.py
wdlfmt/formatters/: common.py  shell_formatter.py  struct.py  task.py  workflow.py
wdlfmt/grammar/: WdlV1Lexer.interp  WdlV1Lexer.py  WdlV1Parser.g4  (+5 more)
wdlformat/: __init__.py  cli.py  formatters.py  shell_formatter.py  utils.py  visitor.py
(+18 files in other folders)
